maps dark mode on theme change fix

--- a/src/app/main-screen/location/location.component.scss
+++ b/src/app/main-screen/location/location.component.scss
@@ -8,12 +8,11 @@
 
 .card-container {
   width: 50vw;
-  height: calc(100vh - var(--mat-tab-height) - 30px);
+  height: calc(100vh - var(--mat-tab-height) - 1rem);
 }
 
 .card-container-mobile {
   width: 100vw;
-  // height: 100%;
 }
 
 .title {
@@ -24,21 +23,27 @@
 }
 
 .details {
-  padding: 15px 15px 0px 15px;
-  height: calc(50% - 15px);
+  padding: 0.5rem;
+  height: calc(50% - 0.5rem);
   max-width: 50rem;
   margin: 0 auto;
 
 }
 
 .details-mobile {
-  padding: 0 15px 15px 15px;
+  padding: 0.5rem;
   height: 50%;
   margin: 0 auto;
 }
 
 .card {
   height: 100%;
+}
+
+.card-image-mobile {
+  object-fit: cover;
+  max-height: 12rem;
+  object-position: 0 70%;
 }
 
 .venue-title {
